--- a/login-page/style.css
+++ b/login-page/style.css
@@ -1,5 +1,17 @@
-.hero{
-    
+.container{
     display: flex;
-   
+}
+.left{
+    width: 60%;
+}
+.right{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+form{
+    
+    border: 2px solid black;
+    background-color: rgb(33, 125, 206);
 }
