--- a/login-page/style.css
+++ b/login-page/style.css
@@ -1,5 +1,7 @@
 .container{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .left{
     width: 60%;
@@ -9,6 +11,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    
 }
 form{
     
