--- a/login-page/style.css
+++ b/login-page/style.css
@@ -21,6 +21,11 @@
 }
 form{
     
-    border: 2px solid black;
-    background-color: rgb(33, 125, 206);
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(242, 248, 253);
+}
+h3{
+    color: rgba(41, 41, 244, 0.898);
 }
