--- a/login-page/style.css
+++ b/login-page/style.css
@@ -23,8 +23,19 @@ form{
     
     border: 1px solid black;
     border-radius: 5px;
+    margin: 5px;
     padding: 10px;
     background-color: rgb(242, 248, 253);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+input{
+    padding: 8px;
+    border-radius: 5px;
+    margin: 5px;
 }
 h3{
     color: rgba(41, 41, 244, 0.898);
