--- a/login-page/style.css
+++ b/login-page/style.css
@@ -39,4 +39,7 @@ input{
 }
 h3{
     color: rgba(41, 41, 244, 0.898);
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
